--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,8 @@ jobs:
  
        #Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: cat <<EOF > script_name.sh
+        run: |
+         cat <<EOF > script_name.sh
          #!/bin/bash
          echo "I am being run from a script"
          touch file1.txt file2.txt file3.txt
