--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,5 @@
 name: CI
- 
+
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -7,40 +7,41 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
- 
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
- 
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
- 
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
- 
+
       # Runs a single command using the runners shell
       - name: Run a list command
         run: ls -al
- 
-       #Runs a set of commands using the runners shell
+
+      # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          cat <<EOF > script_name.sh
-          #!/bin/bash
-          echo "I am being run from a script"
-          touch file1.txt file2.txt file3.txt
-          EOF
- 
-      # Executes script
-      - name: change permissions script file
+          echo "#!/bin/bash" > script_name.sh
+          echo "echo 'I am being run from a script'" >> script_name.sh
+          echo "touch file1.txt file2.txt file3.txt" >> script_name.sh
+          echo "echo 'Created file1.txt, file2.txt & file3.txt'" >> script_name.sh
+          echo "echo 'Listing current directory contents'" >> script_name.sh
+          echo "ls -al" >> script_name.sh
+
+      # Changes permissions of the script file to make it executable
+      - name: Change permissions of the script file
         run: chmod +x script_name.sh
- 
-      - name: Run script   
-      - run: script_name.sh
-          echo Add other actions to build,
-          echo test, and deploy your project.
+
+      # Runs the script
+      - name: Run the script
+        run: ./script_name.sh
+
